GNOME Bugzilla – Bug 788776
Setting network proxy crashes with SIGSEGV
Last modified: 2017-11-01 16:40:32 UTC
Reproducible in 3.26: 1. make sure proxy is off, and reopen Settings 1. click Network panel 2. click some other panel 3. go back to Network panel 4. try to change proxy to "manual" 5. watch Settings crash
+ Trace 238043
Created attachment 361999 [details] [review] 0001-network-proxy-destroy-dialog-with-the-class.patch This patch should fix the crash. Can someone please review it?
Review of attachment 361999 [details] [review]: looks good, thanks. This is an unfortunate common gotcha with GtkBuilder and toplevel windows, see bug 708286
(In reply to Rui Matos from comment #2) Thanks for your review. Can you please push this since I don't have push rights?
Sure, thanks for the patch