network/proxy: destroy dialog with the class

The dialog has several bindings to proxy settings, so it shouldn't
outlive the proxy class.

https://bugzilla.gnome.org/show_bug.cgi?id=788776